# mev-bot

./: .gitignore  .windsurfrules  Cargo.toml  foundry.toml  hardhat.config.js  package-lock.json  package.json  remappings.txt
artifacts/@aave/core-v3/contracts/flashloan/interfaces/IFlashLoanSimpleReceiver.sol/: IFlashLoanSimpleReceiver.dbg.json
artifacts/@aave/core-v3/contracts/protocol/libraries/types/DataTypes.sol/: DataTypes.dbg.json
artifacts/@openzeppelin/contracts/token/ERC20/ERC20.sol/: ERC20.dbg.json
artifacts/@openzeppelin/contracts/token/ERC20/IERC20.sol/: IERC20.dbg.json
artifacts/@openzeppelin/contracts/token/ERC20/extensions/IERC20Metadata.sol/: IERC20Metadata.dbg.json
artifacts/@openzeppelin/contracts/utils/Context.sol/: Context.dbg.json
artifacts/contracts/Test.sol/: Test.dbg.json  Test.json
artifacts/contracts/core/FlashLoanHandler.sol/: FlashLoanHandler.json
artifacts/contracts/mocks/MockDEX.sol/: MockDEX.dbg.json  MockDEX.json
artifacts/contracts/mocks/MockERC20.sol/: MockERC20.json
artifacts/contracts/strategies/SandwichExecutor.sol/: SandwichExecutor.json
artifacts/contracts/utils/PriceOracle.sol/: PriceOracle.dbg.json  PriceOracle.json
cache/: solidity-files-cache.json
contracts/: Test.sol
contracts/core/: FlashLoanHandler.json  FlashLoanHandler.sol
contracts/mocks/: MockAavePool.sol  MockDEX.sol  MockERC20.sol
contracts/strategies/: SandwichExecutor.json  SandwichExecutor.sol
contracts/utils/: PriceOracle.json  PriceOracle.sol
core/: Cargo.toml
core/examples/: blockchain_demo.rs
core/src/: blockchain.rs  circuit_breaker.rs  lib.rs  mempool.rs  middleware.rs  risk.rs  security.rs  simulation.rs
flashloan/: Cargo.toml
flashloan/src/: lib.rs
math/: Cargo.toml
math/src/: error.rs  sandwich.rs
mcp_server/: README.md  arbitrage_server.py  config.py  core_server.py  liquidation_server.py  monitoring_server.py  requirements.txt  server.py  test_liquidation_server.py
mev-risk/: Cargo.toml
mev-risk/src/: lib.rs
scripts/: deploy.js  verify.js
simulation/: Cargo.toml
simulation/src/: main.rs
src/: main.rs
strategies/sandwich/: Cargo.toml
strategies/sandwich/src/: bundler.rs  lib.rs  mempool.rs
test/: SandwichExecutor.t.sol  SandwichExecutor.test.js
test/utils/: test-utils.js
utils/: Cargo.toml
utils/src/: error.rs  lib.rs  types.rs
