[workspace]
members = [
    "core",
    "strategies/sandwich",
    "math",
    "utils"
]
resolver = "2"

[workspace.dependencies]
mev-rs = { git = "https://github.com/ralexstokes/mev-rs" }
revm = "2.3"
tokio = { version = "1.0", features = ["full"] }
parking_lot = "0.12"
atomic-shim = "0.1"

[profile.release]
lto = true
codegen-units = 1
opt-level = 3
