[workspace]
members = [
    "core",
    "math",
    "mev-risk",
    "strategies/sandwich",
    "bin/mev-bot"
]
resolver = "2"

[workspace.dependencies]
ethers = { version = "2.0.14", features = ["ws", "rustls", "json"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
rand = "0.8"
thiserror = "1.0"
tokio = { version = "1.0", features = ["full"] }

[profile.release]
lto = true
codegen-units = 1