[package]
name = "mev-flashloan"
version = "0.1.0"
edition = "2021"

[lib]
path = "src/lib.rs"

[dependencies]
mev-core = { path = "../core" }
mev-math = { path = "../math" }
tokio = { version = "1.0", features = ["full"] }
ethers = { version = "2.0", features = ["legacy"] }
revm = "2.3"
primitive-types = "0.12"
thiserror = "1.0"
mev-simulation = { path = "../simulation", features = ["flashloan"] }

[dev-dependencies]
