[package]
name = "mev-math"
version = "0.1.0"
edition = "2021"

[lib]
path = "src/lib.rs"

[dependencies]
log = "0.4"
revm = "2.3"
primitive-types = "0.12"
ethnum = "1.0"
ethers = { version = "2.0", features = ["legacy"] }
mev-risk = { path = "../mev-risk" }  # Correct path
thiserror = "1.0"
num-bigint = "0.4"

[dev-dependencies]
mev-core = { path = "../core" }
tokio = { version = "1.0", features = ["full"] }
