[package]
name = "mev-simulation"
version = "0.1.0"
edition = "2021"

[features]
flashloan = []
sandwich = []
monitoring = []

[dependencies]
log = "0.4"
mev-core = { path = "../core" }
mev-math = { path = "../math" }
tokio = { version = "1.0", features = ["full"] }
ethers = { version = "2.0", features = ["legacy"] }
thiserror = "1.0"