[package]
name = "mev-sandwich"
version = "0.1.0"
edition = "2021"

[lib]
path = "src/lib.rs"

[dependencies]
ethers = { workspace = true }
mev-core = { path = "../../core" }
mev-math = { path = "../../math" }
mev-risk = { path = "../../mev-risk" }
mev-utils = { path = "../../utils" }
tokio = { workspace = true }
thiserror = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }

[dev-dependencies]
tokio = { version = "1.0", features = ["macros", "rt"] }
rand = { workspace = true }
